privacy button align fix

--- a/assets/sidebar.css
+++ b/assets/sidebar.css
@@ -158,6 +158,7 @@ body.vscode-light #profile {
 	box-sizing: border-box;
 	width: 100%;
 	text-align: center;
+    justify-content: center;
 	margin: 5px 5px 5px 0;
 }
 #privacy span::before {
